--- a/lsw-2017/lsw-2017-client/pom.xml
+++ b/lsw-2017/lsw-2017-client/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>lsw-2017</artifactId>
@@ -58,9 +59,9 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.hansolo.enzo</groupId>
-			<artifactId>Enzo</artifactId>
-			<version>0.3.6</version>
+			<groupId>com.github.plushaze.traynotification</groupId>
+			<artifactId>TrayNotification</artifactId>
+			<version>0.3</version>
 		</dependency>
 	</dependencies>
 </project>
