--- a/lsw-2017/pom.xml
+++ b/lsw-2017/pom.xml
@@ -104,5 +104,10 @@
 			<artifactId>rxjava</artifactId>
 			<version>2.0.7</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>0.10.2.0</version>
+		</dependency>
 	</dependencies>
 </project>
