--- a/lsw-2017/lsw-2017-client/pom.xml
+++ b/lsw-2017/lsw-2017-client/pom.xml
@@ -63,5 +63,10 @@
 			<artifactId>TrayNotification</artifactId>
 			<version>0.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.kstruct</groupId>
+			<artifactId>gethostname4j</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 	</dependencies>
 </project>
