--- a/lsw-2017/pom.xml
+++ b/lsw-2017/pom.xml
@@ -80,16 +80,6 @@
 			<version>2.8</version>
 		</dependency>
 		<dependency>
-			<groupId>kryonet</groupId>
-			<artifactId>kryonet</artifactId>
-			<version>2.21</version>
-		</dependency>
-		<dependency>
-			<groupId>com.esotericsoftware</groupId>
-			<artifactId>kryo</artifactId>
-			<version>4.0.0</version>
-		</dependency>
-		<dependency>
 			<groupId>com.datastax.cassandra</groupId>
 			<artifactId>cassandra-driver-core</artifactId>
 			<version>3.1.4</version>
@@ -105,9 +95,14 @@
 			<version>2.0.7</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka-clients</artifactId>
-			<version>0.10.2.0</version>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>4.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.6.2</version>
 		</dependency>
 	</dependencies>
 </project>
